# edufund

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  EDUFUND_VIDEO_DEMO_SCRIPT.md  README.md  SOROBAN_INTEGRATION.md  composer.json  package-lock.json  package.json
app/Enums/: AchievementType.php  BlockchainNetwork.php  BlockchainTransactionStatus.php  BlockchainTransactionType.php  CampaignStatus.php  CampaignVisibility.php  DisbursementStatus.php  DocumentType.php  DonationStatus.php  EducationLevel.php  FundingCategory.php  FundingRequestStatus.php  MilestoneStatus.php  MilestoneSubmissionStatus.php  SchoolVerificationStatus.php  UserRole.php
app/Models/: Achievement.php  BlockchainTransaction.php  Campaign.php  Disbursement.php  Donation.php  FundingRequest.php  Milestone.php  MilestoneSubmission.php  MilestoneSubmissionDocument.php  School.php  StudentProfile.php  SupportingDocument.php  User.php  Verification.php
app/Policies/: FundingRequestPolicy.php  MilestonePolicy.php
app/Providers/: AppServiceProvider.php
app/Services/: AdminDashboardService.php  AuthService.php  DisbursementService.php  DonationService.php  DonorDashboardService.php  FundingRequestService.php  MilestoneService.php  SchoolDashboardService.php  SchoolProfileService.php  SorobanService.php  StellarService.php  StudentDashboardService.php  StudentProfileService.php  SupportingDocumentService.php  (+1 more)
bootstrap/: app.php
config/: services.php
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
routes/: admin.php  auth.php  donor.php  school.php  student.php  web.php
(+152 files in other folders)
