[package]
name = "edufund-escrow"
version = "1.0.0"
edition = "2021"
description = "EduFund Escrow Smart Contract for Stellar Soroban"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.11"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"

[features]
testutils = ["soroban-sdk/testutils"]